code/parsing/cycl/CycLParser.py
# Generated from CycL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CycLParser ( Parser ):

    grammarFileName = "CycL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'UnicodeStringFn'", "'('", "')'", "'\"'", 
                     "'\\'", "<INVALID>", "<INVALID>", "'equals'", "'not'", 
                     "'and'", "'or'", "'implies'", "'<=='", "'equiv'", "'thereExists'", 
                     "'forAll'", "'in-microtheory'", "'comment'", "'TheSetOf'", 
                     "'prettyString'", "'prettyString-Canonical'", "'Kappa'", 
                     "'trueRule'", "'holdsIn'", "'ist'", "'except'", "'relationAllInstance'", 
                     "'relationAllExists'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "OPEN", "CLOSE", "STRINGQUOTE", 
                      "BACKSLASH", "QUOTEDCHARSEQUENCE", "QUOTEDSTRING", 
                      "EQUALS", "NOT", "AND", "OR", "IF", "ONLY_IF", "IFF", 
                      "EXISTS", "FORALL", "CYC_MT", "CYC_COMMENT", "CYC_THESETOF", 
                      "CYC_PRETTYSTR", "CYC_PRETTYSTRCANONICAL", "CYC_KAPPA", 
                      "CYC_TRUERULE", "CYC_HOLDSIN", "CYC_IST", "CYC_EXCEPT", 
                      "CYC_RELATIONALLINSTANCE", "CYC_RELATIONALLEXISTS", 
                      "NAMECHARSEQUENCE", "VARCHARSEQUENCE", "WHITE", "LineComment", 
                      "CycLineComment", "CycLineComment1" ]

    RULE_constant = 0
    RULE_variable = 1
    RULE_cyclterm = 2
    RULE_term = 3
    RULE_reserved = 4
    RULE_operator = 5
    RULE_arguments = 6
    RULE_cyclstatement = 7
    RULE_microtheory = 8
    RULE_comment = 9
    RULE_prettystring = 10
    RULE_kappa = 11
    RULE_truerule = 12
    RULE_holdsin = 13
    RULE_ist = 14
    RULE_relationallexists = 15
    RULE_relationallinstance = 16
    RULE_thesetof = 17
    RULE_excepts = 18
    RULE_sentence = 19
    RULE_atomsent = 20
    RULE_equation = 21
    RULE_atom = 22
    RULE_predicate = 23
    RULE_boolsent = 24
    RULE_quantsent = 25
    RULE_statement = 26
    RULE_theory = 27

    ruleNames =  [ "constant", "variable", "cyclterm", "term", "reserved", 
                   "operator", "arguments", "cyclstatement", "microtheory", 
                   "comment", "prettystring", "kappa", "truerule", "holdsin", 
                   "ist", "relationallexists", "relationallinstance", "thesetof", 
                   "excepts", "sentence", "atomsent", "equation", "atom", 
                   "predicate", "boolsent", "quantsent", "statement", "theory" ]

    EOF = Token.EOF
    T__0=1
    OPEN=2
    CLOSE=3
    STRINGQUOTE=4
    BACKSLASH=5
    QUOTEDCHARSEQUENCE=6
    QUOTEDSTRING=7
    EQUALS=8
    NOT=9
    AND=10
    OR=11
    IF=12
    ONLY_IF=13
    IFF=14
    EXISTS=15
    FORALL=16
    CYC_MT=17
    CYC_COMMENT=18
    CYC_THESETOF=19
    CYC_PRETTYSTR=20
    CYC_PRETTYSTRCANONICAL=21
    CYC_KAPPA=22
    CYC_TRUERULE=23
    CYC_HOLDSIN=24
    CYC_IST=25
    CYC_EXCEPT=26
    CYC_RELATIONALLINSTANCE=27
    CYC_RELATIONALLEXISTS=28
    NAMECHARSEQUENCE=29
    VARCHARSEQUENCE=30
    WHITE=31
    LineComment=32
    CycLineComment=33
    CycLineComment1=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMECHARSEQUENCE(self):
            return self.getToken(CycLParser.NAMECHARSEQUENCE, 0)

        def QUOTEDCHARSEQUENCE(self):
            return self.getToken(CycLParser.QUOTEDCHARSEQUENCE, 0)

        def QUOTEDSTRING(self):
            return self.getToken(CycLParser.QUOTEDSTRING, 0)

        def getRuleIndex(self):
            return CycLParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = CycLParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CycLParser.QUOTEDCHARSEQUENCE) | (1 << CycLParser.QUOTEDSTRING) | (1 << CycLParser.NAMECHARSEQUENCE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARCHARSEQUENCE(self):
            return self.getToken(CycLParser.VARCHARSEQUENCE, 0)

        def getRuleIndex(self):
            return CycLParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = CycLParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(CycLParser.VARCHARSEQUENCE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycltermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def thesetof(self):
            return self.getTypedRuleContext(CycLParser.ThesetofContext,0)


        def kappa(self):
            return self.getTypedRuleContext(CycLParser.KappaContext,0)


        def getRuleIndex(self):
            return CycLParser.RULE_cyclterm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCyclterm" ):
                listener.enterCyclterm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCyclterm" ):
                listener.exitCyclterm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCyclterm" ):
                return visitor.visitCyclterm(self)
            else:
                return visitor.visitChildren(self)




    def cyclterm(self):

        localctx = CycLParser.CycltermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_cyclterm)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.thesetof()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.kappa()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(CycLParser.VariableContext,0)


        def constant(self):
            return self.getTypedRuleContext(CycLParser.ConstantContext,0)


        def OPEN(self):
            return self.getToken(CycLParser.OPEN, 0)

        def operator(self):
            return self.getTypedRuleContext(CycLParser.OperatorContext,0)


        def arguments(self):
            return self.getTypedRuleContext(CycLParser.ArgumentsContext,0)


        def CLOSE(self):
            return self.getToken(CycLParser.CLOSE, 0)

        def cyclterm(self):
            return self.getTypedRuleContext(CycLParser.CycltermContext,0)


        def reserved(self):
            return self.getTypedRuleContext(CycLParser.ReservedContext,0)


        def getRuleIndex(self):
            return CycLParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = CycLParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_term)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.variable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.constant()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.match(CycLParser.OPEN)
                self.state = 67
                self.operator()
                self.state = 68
                self.arguments()
                self.state = 69
                self.match(CycLParser.CLOSE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.cyclterm()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.reserved()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReservedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUALS(self):
            return self.getToken(CycLParser.EQUALS, 0)

        def NOT(self):
            return self.getToken(CycLParser.NOT, 0)

        def AND(self):
            return self.getToken(CycLParser.AND, 0)

        def OR(self):
            return self.getToken(CycLParser.OR, 0)

        def IF(self):
            return self.getToken(CycLParser.IF, 0)

        def ONLY_IF(self):
            return self.getToken(CycLParser.ONLY_IF, 0)

        def IFF(self):
            return self.getToken(CycLParser.IFF, 0)

        def EXISTS(self):
            return self.getToken(CycLParser.EXISTS, 0)

        def FORALL(self):
            return self.getToken(CycLParser.FORALL, 0)

        def CYC_MT(self):
            return self.getToken(CycLParser.CYC_MT, 0)

        def CYC_COMMENT(self):
            return self.getToken(CycLParser.CYC_COMMENT, 0)

        def CYC_THESETOF(self):
            return self.getToken(CycLParser.CYC_THESETOF, 0)

        def CYC_PRETTYSTR(self):
            return self.getToken(CycLParser.CYC_PRETTYSTR, 0)

        def CYC_PRETTYSTRCANONICAL(self):
            return self.getToken(CycLParser.CYC_PRETTYSTRCANONICAL, 0)

        def CYC_KAPPA(self):
            return self.getToken(CycLParser.CYC_KAPPA, 0)

        def CYC_TRUERULE(self):
            return self.getToken(CycLParser.CYC_TRUERULE, 0)

        def CYC_HOLDSIN(self):
            return self.getToken(CycLParser.CYC_HOLDSIN, 0)

        def CYC_IST(self):
            return self.getToken(CycLParser.CYC_IST, 0)

        def CYC_EXCEPT(self):
            return self.getToken(CycLParser.CYC_EXCEPT, 0)

        def CYC_RELATIONALLINSTANCE(self):
            return self.getToken(CycLParser.CYC_RELATIONALLINSTANCE, 0)

        def CYC_RELATIONALLEXISTS(self):
            return self.getToken(CycLParser.CYC_RELATIONALLEXISTS, 0)

        def getRuleIndex(self):
            return CycLParser.RULE_reserved

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReserved" ):
                listener.enterReserved(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReserved" ):
                listener.exitReserved(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReserved" ):
                return visitor.visitReserved(self)
            else:
                return visitor.visitChildren(self)




    def reserved(self):

        localctx = CycLParser.ReservedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_reserved)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CycLParser.EQUALS) | (1 << CycLParser.NOT) | (1 << CycLParser.AND) | (1 << CycLParser.OR) | (1 << CycLParser.IF) | (1 << CycLParser.ONLY_IF) | (1 << CycLParser.IFF) | (1 << CycLParser.EXISTS) | (1 << CycLParser.FORALL) | (1 << CycLParser.CYC_MT) | (1 << CycLParser.CYC_COMMENT) | (1 << CycLParser.CYC_THESETOF) | (1 << CycLParser.CYC_PRETTYSTR) | (1 << CycLParser.CYC_PRETTYSTRCANONICAL) | (1 << CycLParser.CYC_KAPPA) | (1 << CycLParser.CYC_TRUERULE) | (1 << CycLParser.CYC_HOLDSIN) | (1 << CycLParser.CYC_IST) | (1 << CycLParser.CYC_EXCEPT) | (1 << CycLParser.CYC_RELATIONALLINSTANCE) | (1 << CycLParser.CYC_RELATIONALLEXISTS))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(CycLParser.TermContext,0)


        def getRuleIndex(self):
            return CycLParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = CycLParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_operator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CycLParser.TermContext)
            else:
                return self.getTypedRuleContext(CycLParser.TermContext,i)


        def getRuleIndex(self):
            return CycLParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = CycLParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CycLParser.OPEN) | (1 << CycLParser.QUOTEDCHARSEQUENCE) | (1 << CycLParser.QUOTEDSTRING) | (1 << CycLParser.EQUALS) | (1 << CycLParser.NOT) | (1 << CycLParser.AND) | (1 << CycLParser.OR) | (1 << CycLParser.IF) | (1 << CycLParser.ONLY_IF) | (1 << CycLParser.IFF) | (1 << CycLParser.EXISTS) | (1 << CycLParser.FORALL) | (1 << CycLParser.CYC_MT) | (1 << CycLParser.CYC_COMMENT) | (1 << CycLParser.CYC_THESETOF) | (1 << CycLParser.CYC_PRETTYSTR) | (1 << CycLParser.CYC_PRETTYSTRCANONICAL) | (1 << CycLParser.CYC_KAPPA) | (1 << CycLParser.CYC_TRUERULE) | (1 << CycLParser.CYC_HOLDSIN) | (1 << CycLParser.CYC_IST) | (1 << CycLParser.CYC_EXCEPT) | (1 << CycLParser.CYC_RELATIONALLINSTANCE) | (1 << CycLParser.CYC_RELATIONALLEXISTS) | (1 << CycLParser.NAMECHARSEQUENCE) | (1 << CycLParser.VARCHARSEQUENCE))) != 0):
                self.state = 79
                self.term()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CyclstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def microtheory(self):
            return self.getTypedRuleContext(CycLParser.MicrotheoryContext,0)


        def comment(self):
            return self.getTypedRuleContext(CycLParser.CommentContext,0)


        def prettystring(self):
            return self.getTypedRuleContext(CycLParser.PrettystringContext,0)


        def excepts(self):
            return self.getTypedRuleContext(CycLParser.ExceptsContext,0)


        def getRuleIndex(self):
            return CycLParser.RULE_cyclstatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCyclstatement" ):
                listener.enterCyclstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCyclstatement" ):
                listener.exitCyclstatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCyclstatement" ):
                return visitor.visitCyclstatement(self)
            else:
                return visitor.visitChildren(self)




    def cyclstatement(self):

        localctx = CycLParser.CyclstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cyclstatement)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.microtheory()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.comment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.prettystring()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.excepts()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MicrotheoryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN(self):
            return self.getToken(CycLParser.OPEN, 0)

        def CYC_MT(self):
            return self.getToken(CycLParser.CYC_MT, 0)

        def constant(self):
            return self.getTypedRuleContext(CycLParser.ConstantContext,0)


        def CLOSE(self):
            return self.getToken(CycLParser.CLOSE, 0)

        def getRuleIndex(self):
            return CycLParser.RULE_microtheory

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMicrotheory" ):
                listener.enterMicrotheory(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMicrotheory" ):
                listener.exitMicrotheory(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMicrotheory" ):
                return visitor.visitMicrotheory(self)
            else:
                return visitor.visitChildren(self)




    def microtheory(self):

        localctx = CycLParser.MicrotheoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_microtheory)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(CycLParser.OPEN)
            self.state = 92
            self.match(CycLParser.CYC_MT)
            self.state = 93
            self.constant()
            self.state = 94
            self.match(CycLParser.CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN(self):
            return self.getToken(CycLParser.OPEN, 0)

        def CYC_COMMENT(self):
            return self.getToken(CycLParser.CYC_COMMENT, 0)

        def QUOTEDSTRING(self):
            return self.getToken(CycLParser.QUOTEDSTRING, 0)

        def CLOSE(self):
            return self.getToken(CycLParser.CLOSE, 0)

        def NAMECHARSEQUENCE(self):
            return self.getToken(CycLParser.NAMECHARSEQUENCE, 0)

        def reserved(self):
            return self.getTypedRuleContext(CycLParser.ReservedContext,0)


        def sentence(self):
            return self.getTypedRuleContext(CycLParser.SentenceContext,0)


        def getRuleIndex(self):
            return CycLParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):
